# claude_light

./: .gitignore  CII_BADGE.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_SIGNING.md  SECURITY.md  add_stream_patches.py  architecture.md  benchmark.py  check_syntax.py  claude_light.py  commit_1.sh  debug_apply_skeleton.py  debug_apply_skeleton2.py  debug_apply_skeleton3.py  debug_skeleton.py  dummy.py  failures.txt  fix_patches.py  install.ps1  pyproject.toml  pytest.ini  requirements.txt  sbom.json  test_git_import.py  test_globals_update.py  test_integration.py  test_module_class.py  test_module_update.py  test_patch.py  test_ts.py  validate_syntax.py
.github/: branch_protection.md  dependabot.yml
.github/workflows/: build-wheel.yml  fuzz.yml  sbom.yml  scorecards.yml  test.yml
claude_light/: __init__.py  __main__.py  compressor.py  config.py  editor.py  executor.py  git_manager.py  indexer.py  linter.py  llm.py  main.py  parsing.py  retrieval.py  retry.py  session_manager.py  skeleton.py  state.py  streaming.py  testing.py  ui.py  utils.py
docs/: BENCHMARKS.md  architecture.md  llmlingua_plan.md  test_strategy.md
docs/plantuml/: caching_diagram.puml  ci_cd_pipeline.puml  component_diagram.puml  indexing_flow.puml  rag_pipeline.puml  sequence_diagram.puml  test_execution_flow.puml  test_mock_architecture.puml  test_suite_structure.puml
installers/: install.ps1  install.sh  install_macos.sh
scripts/: OPTIMIZATIONS_SUMMARY.md  benchmark_startup.py  generate_sbom.ps1  generate_sbom.sh
tests/: baseline_retrieval_stats.json  baseline_retrieval_stats_new.json  baseline_token_stats.json  benchmark_claude_code.py  benchmark_cost.py  benchmark_retrieval.py  check_regression.py  conftest.py  test_apply.py  test_benchmarks.py  test_claude_light.py  test_download_progress.py  test_fuzz.py  test_retry.py  test_streaming.py  test_thread_safety.py  test_watchdog.py
tests/benchmarks/: __init__.py  benchmark.py  benchmark_cost.py  benchmark_retrieval.py
tests/fixtures/: __init__.py  retrieval_cases.json
tests/integration/: __init__.py  (+3 more)
(+29 files in other folders)
