[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-light"
version = "0.1.0"
description = "Interactive CLI chat tool for querying and editing a codebase using Claude — hybrid RAG + prompt caching."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "Peter Isberg", email = "isberg.peter+cl@gmail.com" }]
keywords = ["claude", "anthropic", "rag", "llm", "cli", "code-search", "prompt-caching"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = [
    "sentence-transformers>=5.4.1",
    "numpy>=2.4.4",
    "watchdog>=6.0.0",
    "anthropic>=0.97.0",
    "prompt_toolkit>=3.0.52",
    "rich>=15.0.0",
    "einops>=0.8.2",
    "tree-sitter>=0.25.2",
    "tree-sitter-java>=0.23.5",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-go>=0.25.0",
    "tree-sitter-rust>=0.24.2",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
]

[project.optional-dependencies]
llmlingua = ["llmlingua>=0.2.2"]
dev = [
    "build>=1.2",
    "hypothesis>=6.152.1",
    "pytest>=8.0",
]

[project.scripts]
claude-light = "claude_light.__main__:main"

[project.urls]
Homepage = "https://github.com/PIsberg/claude_light"
Repository = "https://github.com/PIsberg/claude_light"
Issues = "https://github.com/PIsberg/claude_light/issues"

[tool.setuptools.packages.find]
include = ["claude_light*"]
exclude = ["tests*", "scripts*", "installers*", "docs*"]
